[package]
name = "mev-bench"
version = "0.1.0"
edition = "2024"
description = "Benchmark tool for Solana MEV providers"
license = "MIT"
repository = "https://github.com/NoctisLight/mev-bench"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"

